# android-genymotion-backend

./: .pre-commit-config.yaml  README.md  android-project-db-schema.xlsx  pyproject.toml
.github/workflows/: deploy_production.yml  deploy_staging.yml
docs/: android-project-db-schema.xlsx  backend-infrastructure.drawio
infra/: app.py  cdk.json
infra/stacks/: backend_stack.py
src/android_genymotion_backend/: api.py  application_manager.py  dashboard.py  domain.py  inactive_session_cleanup_handler.py  schemas.py  session_termination_handler.py  tasks_handler.py  utils.py
