[tool.poetry]
name = "android-genymotion-backend"
version = "0.1.0"
description = ""
authors = ["Vitalii Morskyi <vitalii@morskyi.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35.41"
botocore = "^1.35.41"
pandas = "^2.2.3"
fastapi = "^0.115.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
