[tool.poetry]
name = "android-genymotion-backend"
version = "0.1.0"
description = ""
authors = ["Vitalii Morskyi <vitalii@morskyi.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35.41"
botocore = "^1.35.41"
pandas = "^2.2.3"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
ksuid = "^1.3"
mangum = "^0.19.0"
pydantic = "^2.9.2"
pydantic-core = "2.23.4"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
aws-cdk-lib = "^2.162.1"
constructs = "^10.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
